完善批量删除功能，引入yui插件压缩js和css

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -19,9 +19,14 @@ redis.port=6379
 redis.usepool=true
 
 #####REDIS SENTINEL#######
-redis.node1.ip=192.168.123.11
-redis.node1.sentinels.port=26379
-redis.node2.ip=192.168.123.12
-redis.node2.sentinels.port=26379
-redis.node3.ip=192.168.123.13
-redis.node3.sentinels.port=26379
+redis.node1.ip=localhost
+redis.node1.sentinels.port=66379
+redis.node2.ip=localhost
+redis.node2.sentinels.port=76379
+redis.node3.ip=localhost
+redis.node3.sentinels.port=86379
+redis.node4.ip=localhost
+redis.node4.sentinels.port=96379
+
+
+
