--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,18 @@
 			<version>1.0.2.RELEASE</version>
 		</dependency>
 
+		<!-- spring-security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>3.1.7.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>3.1.7.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
