--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -4,4 +4,9 @@ test.db.jdbcurl=jdbc:mysql://localhost:3306/mytest?useUnicode=true&characterEnco
 test.db.username=root
 test.db.password=root
 
-
+#####REDIS INFO#######
+redis.ip=localhost
+#redis.ip=192.168.123.11
+redis.db=8
+redis.port=6379
+redis.usepool=true
