--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,32 +7,33 @@
 	<display-name>demo</display-name>
 	<description>springmvc-demo</description>
 
-    <!-- 设置Spring容器加载配置文件路径 -->
-    <!-- 包含 Spring Security Configuration File -->
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:/spring/applicationContext*.xml</param-value>
-    </context-param>
+	<!-- 设置Spring容器加载配置文件路径 -->
+	<!-- 包含 Spring Security Configuration File -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:/spring/applicationContext*.xml</param-value>
+	</context-param>
 
 	<!-- 加载spring容器配置 -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	
+
 	<!--配置单点的登陆 结合security配置的concurrency-control -->
-<!-- 	<listener> -->
-<!-- 		<listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class> -->
-<!-- 	</listener> -->
-	
+	<listener>
+		<listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
+	</listener>
+
 	<!-- session超时什么时候加入呢 -->
-<!-- 	<session-config> -->
-<!-- 		<session-timeout>1</session-timeout> -->
-<!-- 	</session-config> -->
+	<!-- <session-config> -->
+	<!-- <session-timeout>1</session-timeout> -->
+	<!-- </session-config> -->
 
 	<!-- Spring Security Filter -->
-	<!-- used for intercepting the HTTP requests and performing authentication related tasks -->
-<!-- SpringSecurity必须的filter 优先配置， -->
-<!--  让SpringSecurity先加载，防止SpringSecurity拦截失效 -->
+	<!-- used for intercepting the HTTP requests and performing authentication 
+		related tasks -->
+	<!-- SpringSecurity必须的filter 优先配置， -->
+	<!-- 让SpringSecurity先加载，防止SpringSecurity拦截失效 -->
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
